--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="assts/style.css">
     <link rel="stylesheet" href="https://fontawesome.com/icons/gear?f=classic&s=solid">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
     <!-- ========== Start header ========== -->
     <section class="header"> 
@@ -24,13 +27,13 @@
               </div>
             </nav>
       <div class="text-box">
-        <h1 style="color: yellow;">BATMAN FOREVER</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi totam expedita non assumenda explicabo <br>
-          voluptatum, delectus culpa quod, maiores facere tempora, animi quia perspiciatis nam fuga. Unde necessitatibus<br>
-           asperiores sit labore est deserunt velit. Cupiditate dicta alias placeat hic, ea voluptas, error sunt nobis unde delectus eum expedita magni quasi?
-      </p>
-        <a href="" class="hero-btn" >VISIT NO KNOW MORE</a>
-      </div> </li>
+        <h1>BATMAN FOREVER</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>
+           Sequi totam expedita non assumenda explicabo 
+          
+</p>
+      <a href="" class="hero-btn" >VISIT NO KNOW MORE</a> 
+      </div> 
 </section>
     <!-- ========== End header ========== -->
     <section class="course">
